캔버스 배경 이미지 루프, 이미지 크기 세팅

--- a/src/style/containers/Nudake.css
+++ b/src/style/containers/Nudake.css
@@ -5,6 +5,11 @@
   align-items: center;
   justify-content: center;
   position: relative;
+
+  /* 배경 이미지 */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .nudake > canvas {
