--- a/src/style/containers/RotateCanvas.css
+++ b/src/style/containers/RotateCanvas.css
@@ -9,7 +9,7 @@
 .rotate-canvas-wrapper > canvas {
   width: 50vmin;
   height: 50vmin;
-  /* border-radius: 50%; */
+  border-radius: 50%;
   box-shadow: inset 0 0 5px 5px rgba(0, 0, 0, 0.2);
   background-color: rgba(0, 0, 0, 0.02);
 }
